apps/servicex/jwt-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-policy
spec:
  jwtRules:
    - issuer: "testing@secure.istio.io"
