apps/servicex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: servicex
  name: servicex
  namespace: servicex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicex
  template:
    metadata:
      labels:
        app: servicex
    spec:
      containers:
        - image: falyoun/cleverbit:s2s-latest
          name: s2s
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: secret-volume
              mountPath: /app/kpf/secret
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
      volumes:
        - name: secret-volume
          secret:
            secretName: cleverbit-secret
