apps/servicex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicex
  namespace: servicex
  labels:
    app: servicex
spec:
  type: ClusterIP
  selector:
    app: servicex
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
